add broker actor